--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/sceneform_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.ar.sceneform.ux.ArFragment"
+        android:name="com.example.nishant.imagerecognition.CustomArFragment"
         />
 
 
