--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,4 +15,26 @@
         />
 
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imview"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:elevation="50dp"
+        android:src="@color/colorAccent"
+        android:layout_alignParentEnd="true"/>
+
+
+    <TextView
+        android:id="@+id/textViewResult"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:fadeScrollbars="false"
+        android:layout_alignParentBottom="true"
+
+        android:maxLines="15"
+        android:scrollbars="vertical"
+        android:textColor="@android:color/black" />
+
+
+</RelativeLayout>
